49
================

27/11/24 Added option to change default for logging emails #1546
27/11/24 Added option for diary tasks to generate diary notes addressed to the user that executed the task #1565
26/11/24 Optimise update_person_from_form to save a query after #1556
26/11/24 Option to record person address changes in the log #1556
25/11/24 Option to open find animal/person in a new tab #1571
23/11/24 Regenerate the secret for a user account when 2FA is disabled
19/11/24 24Pet: Enable for Canadian locales
19/11/24 PetLink: include transfer message on publishing record
18/11/24 shelterview: Include location totals on location and unit #1572
18/11/24 Add "additionalfield contains" option to querybuilder
15/11/24 mobile photo uploader: gallery can upload multiple images #1564
13/11/24 Emblem to indicate animal is future intake
13/11/24 MyPet: fix date format and address fields
11/11/24 Fix animal observations to use a delimiter with fewer collisions ^^
11/11/24 Some share links broken with extra &
08/11/24 Optimise get_animal_data when calling animalview through the service
06/11/24 Fix adoption coordinator not updating from bulk change animal
06/11/24 New microchip registry "MyPet" for UK and NI
05/11/24 Disable deprecated mobile UI
05/11/24 Refactory querybuilder into a separate js file for maintainability
04/11/24 Add locale for Egypt
04/11/24 Fix bug with adoption coordinator not being set from add animal
04/11/24 Show rabies info in banner #1561
01/11/24 Refactor calendarview, csvexport, change_password #1103
01/11/24 FindPet: Record separately when a found report is made #1500
31/10/24 Force movementtypes > 8 to be unadoptable
30/10/24 Prevent SQLite paths breaking file DBFS storage #1559
30/10/24 Place a hard limit of >250 microchips to register in one go
29/10/24 Accidentally removed tattoo/chip date fields from animal_new #1103
25/10/24 New location filters "All Dogs", "All Cats" 
24/10/24 FindPet: Validate we didn't get an error in the report_id