@@ -1267,8 +1267,6 @@ $(function() {
             return [
                 '<div id="tab-logs">',
                 '<p>',
-                '<input data="LogEmailByDefault" id="logemailbydefault" type="checkbox" class="asm-checkbox" /> <label for="logemailbydefault">' + _("Check the log email checkbox by default") + '</label>',
-                '<br />',
                 '<input data="FlagChangeLog" id="flagchangelog" type="checkbox" class="asm-checkbox" /> <label for="flagchangelog">' + _("When I change the flags on an animal or person, make a note of it in the log with this type") + '</label>',
                 '<select data="FlagChangeLogType" id="flagchangelogtype" class="asm-selectbox">',
                 html.list_to_options(controller.logtypes, "ID", "LOGTYPENAME"),
@@ -1291,6 +1289,11 @@ $(function() {
                 '<br />',
                 '<input data="AddressChangeLog" id="addresschangelog" type="checkbox" class="asm-checkbox" /> <label for="addresschangelog">' + _("When I change the address of a person, make a note of it in the log with this type") + '</label>',
                 '<select data="AddressChangeLogType" id="addresschangelogtype" class="asm-selectbox">',
+                html.list_to_options(controller.logtypes, "ID", "LOGTYPENAME"),
+                '</select>',
+                '<br />',
+                '<input data="LogEmailByDefault" id="logemailbydefault" type="checkbox" class="asm-checkbox" /> <label for="logemailbydefault">' + _("Check the log email checkbox by default, make a note of it in the log with this type as default") + '</label>',
+                '<select data="EmailLogType" id="emaillogtype" class="asm-selectbox">',
                 html.list_to_options(controller.logtypes, "ID", "LOGTYPENAME"),
                 '</select>',
                 '</p>',
